JSAI/error/src/test/resources/base/loops_a009.js
var array = ["hello", "world"];
var result = "";

for (x in array) {
  print(x)
  var q = array[x]
  print(q)
  result += q
};

print(result)
result;
